
Changes in Version 0.6-8 (in development)

 o support arrows with panel.segplot.

 o changed panel.xblocks() to show data coverage by default.

 o panel.smoother(), panel.2dsmoother() now omit non-finite values.

 o panel.qqmath.tails() is now deprecated as its main functionality
   has been moved into lattice::panel.qqmath().

 o glayer() was failing on plots with an existing 'panel.groups'.

 o function simpleSmoothTs (calculations for panel.tskernel).

Changes in Version 0.6-6

 o xyplot.ts actually removed now (forgot to delete it after lattice release).
 
 o new function horizonplot().

 o fixed rescaling bug in panel.tskernel(..., sides = 1).

 o mapplot can now take colramp = NULL to use the current theme.

Changes in Version 0.6-5

 o new panel functions panel.smoother() and panel.quantile().
   The latter requires the quantreg package.

 o new panel function panel.tskernel().

 o layer() rewritten and now has several new arguments.
   New convenience functions layer_(), glayer(), etc.

 o new functions theEconomist.theme() and asTheEconomist().

 o custom.theme() gains a `...` argument passed to simpleTheme.
   Added a variant custom.theme.2() with different defaults.

 o expanded xyplot.ts() and moved it to the lattice package.

 o improved handling of colours in panel.xblocks().
   Added several more examples to the help page.

 o fixed panel.xblocks() to handle cases of no missing data.

Changes in Version 0.6-4

 o as.layer() gains arguments x.same and y.same.

Changes in Version 0.6-2

 o new functions 'panel.xblocks', 'panel.qqmath.tails',
   'panel.xyarea' and 'panel.qqmath.xyarea'.

 o added explicit 'layout' argument to 'marginal.plot'
   (was clobbered by the default NULL in 'c.trellis').

 o 'c.trellis' handles 'subscripts' argument to prepanel functions.

Changes in Version 0.6-1

 o fixed 'layout' argument to 'xyplot.list' and 'c.trellis'.

Changes in Version 0.6-0

 o new function xyplot.list, to create and merge multiple plots