@@ -5,12 +5,14 @@ Changes in Version 0.6-8 (in development)
 
  o changed panel.xblocks() to show data coverage by default.
 
- o panel.smoother(), panel.2dsmoother() now omit non-finite values.
+ o panel.smoother() now omits non-finite values and converts to numeric.
 
  o panel.qqmath.tails() is now deprecated as its main functionality
    has been moved into lattice::panel.qqmath().
 
  o glayer() was failing on plots with an existing 'panel.groups'.
+
+ o layer(etc = TRUE) now works in the default case of eval = FALSE.
 
  o function simpleSmoothTs (calculations for panel.tskernel).
 
